--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@iconscout/react-unicons": "^1.1.6",
+    "@mui/material": "^5.6.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.0",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.0",
     "firebase": "^10.8.0",
     "firebaseui": "^6.1.0",
+    "framer-motion": "^6.2.9",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
