--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,8 @@
     "@emotion/styled": "^11.8.1",
     "@iconscout/react-unicons": "^1.1.6",
     "@mui/material": "^5.6.0",
+    "@nivo/core": "^0.84.0",
+    "@nivo/pie": "^0.84.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
