--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,17 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@iconscout/react-unicons": "^1.1.6",
-    "@mui/material": "^5.6.0",
+    "@mui/icons-material": "^5.15.11",
+    "@mui/material": "^5.15.11",
+    "@mui/x-data-grid": "^6.19.5",
+    "@nivo/bar": "^0.84.0",
     "@nivo/core": "^0.84.0",
     "@nivo/pie": "^0.84.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.35.0",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.0",
     "firebase": "^10.8.0",
@@ -23,7 +27,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.0",
+    "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
