--- a/Jata_Backend/package.json
+++ b/Jata_Backend/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
     "mysql2": "^3.9.1",
     "sequelize": "^6.36.0",
-    "sequelize-cli": "^6.6.2"
+    "sequelize-cli": "^6.6.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "express": "^4.18.3",
+    "nodemon": "^3.1.0"
   }
 }
