--- a/Jata_Backend/package.json
+++ b/Jata_Backend/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mysql2": "^3.9.1",
+    "node-fetch": "^2.7.0",
     "sequelize": "^6.36.0",
     "sequelize-cli": "^6.6.2"
   }
