--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootswatch": "^5.3.0",
     "firebase": "^10.8.0",
     "firebaseui": "^6.1.0",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
