--- a/Jata_Backend/config/config.json
+++ b/Jata_Backend/config/config.json
@@ -1,21 +1,21 @@
 {
   "development": {
     "username": "root",
-    "password": "saigon",
+    "password": "123456",
     "database": "jatadata",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "test": {
     "username": "root",
-    "password": "saigon",
+    "password": "123456",
     "database": "jatadata",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
-    "password": "saigon",
+    "password": "123456",
     "database": "jatadata",
     "host": "127.0.0.1",
     "dialect": "mysql"
