--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-circular-progressbar": "^2.0.4",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
     "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^5.0.1",
