--- a/Jata_Backend/package.json
+++ b/Jata_Backend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mysql2": "^3.9.2",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.0",
     "sequelize": "^6.36.0",
     "sequelize-cli": "^6.6.2",
