--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@mui/icons-material": "^5.15.11",
-    "@mui/material": "^5.15.11",
+    "@mui/material": "^5.15.12",
     "@mui/x-data-grid": "^6.19.5",
     "@nivo/bar": "^0.84.0",
     "@nivo/core": "^0.84.0",
@@ -25,6 +25,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.0.4",
     "react-datepicker": "^6.2.0",
     "react-dom": "^18.2.0",
