--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.11.0",
     "@iconscout/react-unicons": "^1.1.6",
     "@mui/icons-material": "^5.15.11",
+    "@mui/lab": "^5.0.0-alpha.167",
     "@mui/material": "^5.15.12",
     "@mui/x-data-grid": "^6.19.5",
     "@nivo/bar": "^0.84.0",
